white space fix for wbb option box

--- a/src/resources/styles/warband-builder/WbbOptionBox.sass
+++ b/src/resources/styles/warband-builder/WbbOptionBox.sass
@@ -18,3 +18,6 @@
         display: flex
         justify-content: space-between
         align-items: center
+
+        .btn-primary
+            white-space: nowrap
